--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,11 @@
         display: inline;
     }
 }
+@media screen and (min-width:1800px) {
+    .App{
+        width:1800px;
+        margin:0 auto;
+    }
+}
+
+
